cmake_minimum_required(VERSION 3.0.0)
project(Robot)
set(CMAKE_CXX_STANDARD 11)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR})
set(WPI_DIR $ENV{HOME}/wpilib)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++1y -Wall -pthread")
include_directories(${WPI_DIR}/cpp/current/include ${WPI_DIR}/user/cpp/include ${CMAKE_SOURCE_DIR})
set(CMAKE_EXE_LINKER_FLAGS "-pthread -rdynamic -Wl,-rpath,/opt/GenICam_v3_0_NI/bin/Linux32_ARM,-rpath,/usr/local/frc/lib")
link_directories(${WPI_DIR}/common/current/lib/linux/athena/shared ${WPI_DIR}/cpp/current/reflib/linux/athena/shared ${WPI_DIR}/user/cpp/lib)
file(GLOB SRC_FILES "${CMAKE_CURRENT_LIST_DIR}/src/*cpp" "${CMAKE_CURRENT_LIST_DIR}/src/Commands/*cpp" "${CMAKE_CURRENT_LIST_DIR}/src/Subsystems/*cpp")
add_executable(debug ${SRC_FILES})
set_target_properties(debug PROPERTIES COMPILE_FLAGS "-O0 -Og -g3")
add_executable(opt ${SRC_FILES})
set_target_properties(opt PROPERTIES COMPILE_FLAGS "-O2")
add_library(CTRE_Phoenix STATIC IMPORTED)
set_property(TARGET CTRE_Phoenix PROPERTY IMPORTED_LOCATION ${WPI_DIR}/user/cpp/lib/libCTRE_Phoenix.a)
add_library(CTRE_PhoenixCCI STATIC IMPORTED)
set_property(TARGET CTRE_PhoenixCCI PROPERTY IMPORTED_LOCATION ${WPI_DIR}/user/cpp/lib/libCTRE_PhoenixCCI.a)
add_library(wpi SHARED IMPORTED)
set_property(TARGET wpi PROPERTY IMPORTED_LOCATION ${WPI_DIR}/cpp/current/reflib/linux/athena/shared/libwpi.so)
target_link_libraries(debug wpi CTRE_Phoenix CTRE_PhoenixCCI)
target_link_libraries(opt wpi CTRE_Phoenix CTRE_PhoenixCCI)
